cmake_minimum_required(VERSION 3.22)
project(algorithm)

set(CMAKE_CXX_STANDARD 17)

add_executable(algorithm main/main.cpp main/Baek_1000.h main/Common.h main/Baek_10828.h main/Baek_9093.h main/Programmers_01.h main/Programmers_02.h main/Programmers_03.h main/Programmers_04.h main/Programmers_05.h main/Programmers_06.h main/Programmers_07.h main/Programmers_08.h main/Programmers_09.h main/Programmers_10.h main/Programmers_11.h)
